# monorepo

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  temp.txt
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy.yml  renew-certs.yml
src/chat/: admin.py  consumers.py  models.py  routing.py  tests.py  urls.py  views.py
src/chat/migrations/: 0001_initial.py  0002_conversation_invite_token.py  0003_rename_chat_messag_convers_7d0bd9_idx_chat_messag_convers_3154fc_idx.py
src/chat/templates/chat/: conversation_list.html  join.html  room.html
src/config/: asgi.py  settings.py  urls.py
src/templates/: base.html
src/templates/registration/: login.html  signup.html
