[project]
name = "monorepo-chat"
version = "0.1.0"
description = "Django chat with Channels, Redis, and Postgres"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<7",
    "daphne>=4.0",
    "channels>=4.0",
    "channels-redis>=4.2",
    "django-redis>=5.4",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
